fixed responsive structure on mobile

--- a/style.scss
+++ b/style.scss
@@ -4,15 +4,13 @@
 /* ------------ Core Style -------------- */
 
 
-body
-{
+body {
   margin-top: 20px ! important;
   height: 100%;
   overflow-x: hidden;
 }
 
-i
-{
+i {
   text-indent: 0;
 }
 
@@ -43,7 +41,7 @@ th.title {
 
 /* ------------ Sidebar Style -------------- */
 
-#front-picture{
+#front-picture {
   width:150px;
   height:150px;
   border-radius:5%;
@@ -56,8 +54,7 @@ th.title {
   min-height: 100%;
 }
 
-#social-icons
-{
+#social-icons {
   width: 100%;
   display: block;
 }
@@ -124,8 +121,7 @@ th.title {
   font-weight: bold;
 }
 
-.content p
-{
+.content p {
   font-family: 'Lusitana', serif;
   background-color: #fff;
   font-size: 16px;
@@ -147,17 +143,21 @@ th.title {
 }
 
 .navigation a {
-  background-color: #fff;
-  font-style: normal;
-  color: #8C8C8C;
-  font-weight: 300;
-  margin: 10px;
-  width: 0%;
-  font-size: 18px;
+    background-color: #fff;
+    font-style: normal;
+    color: #8C8C8C;
+    font-weight: 300;
+    margin-right: 10px;
+    margin-left: 10px;
+    width: 0%;
+    font-size: 18px;
 }
 
-.content pre
-{
+.navigation {
+  padding-top: 15px;
+}
+
+.content pre {
   border:none;
   width: 70%;
 
@@ -170,8 +170,7 @@ th.title {
   color:#777777;
 }
 
-.content img
-{
+.content img {
   display: block;
   max-width: 100%;
   margin: 0 0 1rem;
@@ -183,17 +182,46 @@ th.title {
   width: 180px;
   color: #eee;
   left: 0;
-  height: 100%;
+}
+
+.split {
+  div {
+    width: 100%; 
+    height: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    float: left;
+  }
+
+  hr {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+}
+
+#social-icons {
+  padding-bottom: 15px;
 }
 
 @media screen and (max-width: 768px) {
   .sidebar {
     width: 100%;
-    height: 70px;
+  }
+
+  .navigation {
+    padding-top: 0;
+
+    ul {
+      width: 100%;
+      height: 30px;
+      padding-bottom: 0;
+    }
+
   }
 
   #social-icons ul {
-    text-align: center;
+      text-align: center;
   }
   
   .sidebar menu {
@@ -204,17 +232,12 @@ th.title {
     float: left;
     vertical-align: baseline;
     margin-top: 14px;
-    margin-bottom: 14px;
   }
   
   .content {
     margin-left: 20px;
     margin-right: 20px;
     padding-right: 0;
-  }
-  
-  .navigation {
-    float: left;
   }
 
   #front-picture {
@@ -225,16 +248,8 @@ th.title {
     display: none;
   }
 
-  #division {
+  #hide {
     display: none;
-  }
-
-  #social-icons {
-    float: right;
-  }
-
-  #test {
-    border-color: #666
   }
 }
 
@@ -248,7 +263,6 @@ th.title {
   p
   {
     font-family: 'Lusitana', serif;
-    background-color: #fff;
     font-size: 13px;
     line-height: normal;
     font-style: normal;
